aded: deselect non-empty label items

--- a/index.cfg
+++ b/index.cfg
@@ -13,8 +13,12 @@
       <atom type="EditorColor">524288</atom>
         <atom type="Proficiency">0</atom>
       <list type="Control" val="cmd @{scripts/level_by_label.py}">
-        <atom type="Label">Set Level</atom>
+        <atom type="Label">Set Level by Label</atom>
         <atom type="Tooltip">Set level for selected items using label data</atom>
+      </list>
+      <list type="Control" val="cmd @{scripts/deselect_nonempty_label.py}">
+        <atom type="Label">Deselect Labeled Items</atom>
+        <atom type="Tooltip">Deswelects items with non-empty label</atom>
       </list>
     </hash>
   </atom>
