added: custom draw options deselect items with custom draw options

--- a/index.cfg
+++ b/index.cfg
@@ -18,7 +18,15 @@
       </list>
       <list type="Control" val="cmd @{scripts/deselect_nonempty_label.py}">
         <atom type="Label">Deselect Labeled Items</atom>
-        <atom type="Tooltip">Deswelects items with non-empty label</atom>
+        <atom type="Tooltip">Deselects items with non-empty label</atom>
+      </list>
+      <list type="Control" val="cmd @{scripts/custom_draw.py}">
+        <atom type="Label">Set Custom Draw Option</atom>
+        <atom type="Tooltip">Sets custom draw options for selected items</atom>
+      </list>
+      <list type="Control" val="cmd @{scripts/deselect_custom_draw.py}">
+        <atom type="Label">Deselect Custom Draw Option</atom>
+        <atom type="Tooltip">Deselect items with custom draw options</atom>
       </list>
     </hash>
   </atom>
